# lessonlab

./: README.md  pyproject.toml
.agent-memory/: session-scaffold-lesson-command-20260723.md
.agent-todos/: scaffold-lesson-command-20260723-155017.md
.agents/skills/lessonlab-teach/: SKILL.md
.agents/skills/lessonlab-teach/agents/: openai.yaml
assets/: course.css  quiz.js
schemas/: answer.schema.json
src/lessonlab/: __init__.py  cli.py  http_app.py  lessonlab_cli.py  lessons.py  paths.py  scaffold.py  service.py  state.py  validation.py
src/lessonlab/commands/: init.py  scaffold.py  serve.py  validate.py
tests/: conftest.py  test_http_app.py  test_init.py  test_scaffold.py  test_service.py  test_state.py  test_validation.py
