[project]
name = "lessonlab"
version = "0.1.0"
description = "Local lesson runtime: static HTML lessons + tiny REST API for draft/submit answer state."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sjwestern" }]
# Runtime is intentionally zero-dependency: standard library only.
dependencies = []

[project.scripts]
lesson-server = "lessonlab.cli:main"
lessonlab-validate = "lessonlab.validation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lessonlab"]

[tool.hatch.build.targets.wheel.shared-data]
"assets" = "share/lessonlab/assets"
"schemas" = "share/lessonlab/schemas"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
